--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,12 +62,13 @@
                               vanaf 18 jaar:&lt;/td&gt;&lt;td&gt;€ 153,-&lt;/td&gt;&lt;/tr&gt;
 </code></pre>
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
-</section><section><h2 id="dans-projecten-worden-apart-aangekondigd-en-kunnen-varieren-in-prijs-afhankelijk-van-de-duur-van-het-project">Dans Projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</h2>
-<p>Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)
+</section><section><h2 id="dans-projecten">Dans Projecten</h2>
+<p>Dans porjecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.
+Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)
 18+  €50,-
 18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#97;&#x62;&#x73;&#64;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
