--- a/dansproject.html
+++ b/dansproject.html
@@ -38,7 +38,7 @@
 We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
 Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) en kost totaal € 50,- voor leerlingen 18+ en €45,- voor 18-, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. 
-Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#108;">&#x62;&#x61;&#x62;&#115;&#64;&#x62;&#x61;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#x6c;&#46;&#x6e;&#108;</a> 
+Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> 
 Meldt je snel aan! 
 voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
