--- a/hoeveel.html
+++ b/hoeveel.html
@@ -64,11 +64,11 @@
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans porjecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.
-Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)
-18+  €50,-
-18-  €45,-</p>
+Dans Project 3: Modern Gevorderd 11 &amp; 25 maart (14:00-16:00)</p>
+<p>18+  €50,-</p>
+<p>18-  €45,-</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#x62;&#x61;&#98;&#115;&#98;&#x61;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
