--- a/hoeveel.html
+++ b/hoeveel.html
@@ -55,10 +55,13 @@
 <tr><td>Korte cursus (12 lessen) 45 min. 2-5 jaar:</td><td>€85,-</td></tr>
 
 
+
 <tr><td>Korte cursus (12 lessen) 60 min. 6 t/m 17 jaar:</td><td>€99,-</td></tr>
 
 
+
 <tr><td>Korte cursus (12 lessen) 60 min. vanaf 18 jaar:</td><td>€150 -</td></tr>
+
 
 
 
@@ -66,7 +69,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#x73;&#99;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
