--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <section><h1 id="start-seizoen-2023-2024">Start seizoen 2023-2024</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs&#39;Balletschool"> 
 Na de zomer weer lekker dansen? 
-Aanmeldformulier voor seizoen 2023-2024 : <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a>
-Rooster seizoen 23-24: <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=1911534545&amp;single=true&amp;widget=true&amp;headers=false"></iframe></p>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a>
+<a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
 </section><section><h1 id="workshop-dansweek">Workshop-Dansweek</h1>
 <p><img src="resources/image/algemeen/Modern.JPG" alt="Workshop Dansweek bij Babs&#39;Balletschool"> 
 Kom meedoen in de gratis Workshop-dansweek van <strong>28 aug t/m 1 sept</strong> </p>
