--- a/dansproject.html
+++ b/dansproject.html
@@ -41,7 +41,7 @@ kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
 Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
 Ben snel met je inschrijving! 
 Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#111;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
