--- a/index.html
+++ b/index.html
@@ -42,14 +42,21 @@ Na de zomer weer lekker dansen? </p>
 <p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
 <strong>Zondag 10 september</strong> is er weer een gezellige Open Dag in samenwerking met de Muziekschool All Music en Theater de KiK.
 Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. </p>
-<p><strong>Dans Programma in dansstudio:</strong><br>11:00 Peuterdans 2-4 jaar
+<p><strong>Dans Programma in dansstudio:</strong></p>
+<table>  
+11:00 Peuterdans 2-4 jaar
 12:00 Kleuterballet 4-6 jaar
 13:00 Kinderballet 6-9 jaar
 14:00 Jazzballet vanaf 9 jaar
-16:00 Moderne dans volwassenen.</p>
-<p><strong>Dans presentaties in theaterzaal:</strong>
+16:00 Moderne dans volwassenen.
+<table>
+
+<p><strong>Dans presentaties in theaterzaal:</strong></p>
+<table>
 13:00-13:15  (Klassiekballet en Moderne tieners) 
-14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
+14:45-15:00  (Kinderballet, Klassiekballet & Modern tieners) 
+<table>
+
 <p>Bekijk ook het programma van Theater de KiK. <a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen-10-9/">Buiten Programma en film</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
