--- a/wanneer.html
+++ b/wanneer.html
@@ -51,14 +51,14 @@ Opening cultureel seizoen in samenwerking met Theater De KiK en muziekschool All
 <p><strong>Pakjesavond</strong>                 5 december 2023
 (vanaf 18:00 vervallen de lessen) </p>
 <p><strong>Mini-Voorstelling &#39;Winter&#39;</strong>  16 december 2023
-(enkele groepen zullen optrdens verzorgen) </p>
+(enkele groepen zullen optredens verzorgen) </p>
 <p><strong>Kerstvakantie</strong>               25 december 2023 t/m 5 januari 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Verkleed lessen</strong>             5 t/ 9 februari 2024<br>(Kom verkleed naar de lessen deze week!)</p>
 <p> <strong>Carnavalsvakantie</strong>          12 februari t/m 16 februari 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>                  maandag 1 april 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
 <p><strong>Meivakantie</strong>                 donderdag 29 april t/m 10 mei 2024<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Pinksterdag</strong>              maandag 20 mei 2024<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Open Podium</strong>                 nog onbekend
+<p><strong>Open Podium</strong>                 25 mei 2024 14:00 
 (Maak je eigen choreo en nodig al je publiek uit om te komen kijken!) </p>
 <p><strong>Orientatie week</strong>             24 juni t/m 28 juni 2024<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
 <p> <strong>Diploma lessen</strong>              1 t/m 5 juli 2024<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
