--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@ Tijdens deze dag kun je genieten van workshops, presentaties en open lessen beki
 13:00 Kinderballet 6-9 jaar
 14:00 Jazzballet vanaf 9 jaar
 16:00 Moderne dans volwassenen.
-<table>
+
 
 <p><strong>Dans presentaties in theaterzaal:</strong></p>
-<table>
-13:00-13:15  (Klassiekballet en Moderne tieners) 
-14:45-15:00  (Kinderballet, Klassiekballet & Modern tieners) 
+<p>13:00-13:15  (Klassiekballet en Moderne tieners) 
+14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
 <table>
 
 <p>Bekijk ook het programma van Theater de KiK. <a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen-10-9/">Buiten Programma en film</a></p>
