--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#101;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
