--- a/index.html
+++ b/index.html
@@ -49,13 +49,11 @@ Tijdens deze dag kun je genieten van workshops, presentaties en open lessen beki
 13:00 Kinderballet 6-9 jaar
 14:00 Jazzballet vanaf 9 jaar
 16:00 Moderne dans volwassenen.
-
-
-<p><strong>Dans presentaties in theaterzaal:</strong></p>
-<p>13:00-13:15  (Klassiekballet en Modern tieners) 
-14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
 <table>
 
+<p><strong>Dans presentaties in theaterzaal:</strong></p>
+<p>13:00-13:15  (Klassiekballet en Modern tieners) </p>
+<p>14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
 <p>Bekijk ook het programma van Theater de KiK. <a href="https://theaterdekik.nl/acties/opening-cultureel-seizoen-10-9/">Buiten Programma en film</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
