--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@ Na de zomer weer lekker dansen? </p>
 <strong>Zondag 10 september</strong> is er weer een gezellige Open Dag in samenwerking met de Muziekschool All Music en Theater de KiK.
 Tijdens deze dag kun je genieten van workshops, presentaties en open lessen bekijken. </p>
 <p><strong>Dans Programma in dansstudio:</strong></p>
-<table>  
-11:00 Peuterdans 2-4 jaar
-12:00 Kleuterballet 4-6 jaar
-13:00 Kinderballet 6-9 jaar
-14:00 Jazzballet vanaf 9 jaar
-16:00 Moderne dans volwassenen.
-<table>
-
+<p>11:00 Peuterdans 2-4 jaar</p>
+<p>12:00 Kleuterballet 4-6 jaar</p>
+<p>13:00 Kinderballet 6-9 jaar</p>
+<p>14:00 Jazzballet vanaf 9 jaar</p>
+<p>16:00 Moderne dans volwassenen.</p>
 <p><strong>Dans presentaties in theaterzaal:</strong></p>
 <p>13:00-13:15  (Klassiekballet en Modern tieners) </p>
 <p>14:45-15:00  (Kinderballet, Klassiekballet &amp; Modern tieners) </p>
