--- a/dansproject.html
+++ b/dansproject.html
@@ -33,16 +33,9 @@
         </header>
         <main class="">
             <div class="where"><span>dansproject</span></div>
-            <section><h1 id="dans-project-modern-gevorderd">Dans Project Modern Gevorderd</h1>
-<p><img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool">
-We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. </p>
-<p>Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) 
-kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
-Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
-Ben snel met je inschrijving! 
-Bij voldoende animo gaat het project door. </p>
-<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
-</section>
+            <section><h1 id="dans-project">Dans Project</h1>
+<p>De dansprojecten op zaterdag zullen in de loop van het seizoen worden aangekondigd. </p>
+</section><section></section>
         </main>
         <footer>
             <nav>
