--- a/flamenco.html
+++ b/flamenco.html
@@ -35,7 +35,7 @@
             <div class="where"><span>flamenco</span></div>
             <section><h1 id="flamenco">Flamenco</h1>
 <p><img src="resources/image/algemeen/Flamencoles.JPG" alt="Flamenco dans"></p>
-<p>De Flamenco dans vindt haar traditie in de zuidelijke regionen van Spanje. Van virtuoos voetenwerk tot sierlijk of juist ingetogen. De Flamencodans wordt meer en meer gecombineerd met de hedendaagse danstechnieken en gezien in de theaters als volwaardig theaterdans. De Flamenco kenmerkt zich door het specifieke gebruik van de voet-ritmes, de sierlijke draaiing van de pols en de klap techniek.</p>
+<p>De Flamenco dans vindt haar traditie in de zuidelijke regionen van Spanje. Virtuoos voetenwerk, vrolijk of juist ingetogen. De Flamencodans wordt meer en meer gecombineerd met de hedendaagse danstechnieken en gezien in de theaters als volwaardig theaterdans. De Flamenco kenmerkt zich door het specifieke gebruik van de voet-ritmes, het sierlijke draaien van de polsen en de klap techniek.</p>
 <p>De Flamenco les voor volwassenen is op vrijdag voor mensen met enkele jaren Flamenco ervaring.</p>
 </section>
         </main>
