--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ Tijdens deze dag kun je genieten van workshops, presentaties en open lessen beki
 <p>12:00 Kleuterballet 4-6 jaar</p>
 <p>13:00 Kinderballet 6-9 jaar</p>
 <p>14:00 Jazzballet vanaf 9 jaar</p>
+<p>15:00 Moderne dans vanaf 9 jaar </p>
 <p>16:00 Moderne dans volwassenen.</p>
 <p><strong>Dans presentaties in theaterzaal:</strong></p>
 <p>13:00-13:15  (Klassiekballet en Modern tieners) </p>
