--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Na de zomer weer lekker dansen? </p>
 </section><section><h1 id="open-dag">Open Dag</h1>
 <p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
 <strong>Zondag 10 september</strong> was het warm maar erg gezellig tijdens onze Open Dag. 
-Ook enthousiast geworden? Hierboven de link om je in te schrijven voor seizoen 2023-2024 of meld je aan voor een proefles mailto:<a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#108;</a></p>
+Ook enthousiast geworden? Hierboven de link om je in te schrijven voor seizoen 2023-2024 of meld je aan voor een proefles <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
