--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 Na de zomer weer lekker dansen? </p>
 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 <p><a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a></p>
-</section><section><h1 id="open-dag">Open Dag</h1>
-<p><img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij Babs&#39;Balletschool"> 
-<strong>Zondag 10 september</strong> was het warm maar erg gezellig tijdens onze Open Dag. 
-Ook enthousiast geworden? Hierboven de link om je in te schrijven voor seizoen 2023-2024 of meld je aan voor een proefles <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+</section><section><h1 id="sjors-sportief">Sjors Sportief</h1>
+<p><img src="resources/image/algemeen/sjorssportief&creatief.jpg" alt="Sjors Sportief bij Babs&#39;Balletschool"> 
+In de week van <strong>25 t/m 29 september</strong> zijn er weer kinderen welkom die zich via Sjors Sportief hebben aangemeld om een keer te komen dansen. 
+Zij kunnen zo gratis ervaren hoe leuk dansen is. </p>
 </section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
 <p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
 In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
