--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ Na de zomer weer lekker dansen? </p>
 <p><img src="resources/image/algemeen/sjorssportief&creatief.jpg" alt="Sjors Sportief bij Babs&#39;Balletschool"> 
 In de week van <strong>25 t/m 29 september</strong> zijn er weer kinderen welkom die zich via Sjors Sportief hebben aangemeld om een keer te komen dansen. 
 Zij kunnen zo gratis ervaren hoe leuk dansen is. </p>
-</section><section><h1 id="presentaties-2024">Presentaties 2024</h1>
-<p><img src="resources/image/algemeen/Winter%202021.jpg" alt="Presentaties Babs&#39;Balletschool"> 
-In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
-Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK dus zet de datum alvast in de agenda! </p>
+</section><section><h1 id="presentaties-2023-2024">Presentaties 2023-2024</h1>
+<p><img src="resources/image/algemeen/templates/snowflakes-ballerina.jpg" alt="Presentaties Babs&#39;Balletschool"> 
+In het nieuwe dansseizoen staan natuurlijk de lessen weer centraal maar organiseren we ook diverse presentaties. Op <strong>zaterdag 16 december</strong> presenteren we een mini voorstelling WINTER in Theater de KiK en op <strong>25 mei 2024</strong> een Open Podium waar leerlingen hun eigen werk kunnen tonen. 
+Kom kijken of meedoen en zet alle data alvast in de agenda! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
