--- a/index.html
+++ b/index.html
@@ -36,17 +36,11 @@
             <section><h1 id="dans-plezier">Dans plezier</h1>
 <p>Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Instromen is in de meeste groepen nog mogelijk. Stuur een mail voor het aanvragen van een vrijblijvende proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
-</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning:</h1>
+</section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p><img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2023-2024 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2023-2024</a>
 aanmelden voor dit seizoen? 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="open-podium">Open Podium</h1>
-<p><img src="resources/image/openingkultuurklup/OpeningKultuurklupStage.JPG" alt="Open Podium 2023-2024 bij Babs Balletschool"> 
-**zaterdag 25 mei 14:00 &amp; 15:30 ** is weer ons Open Podium in theater De KiK. 
-We verheugen ons op alle creatieve dansen. 
-Er zijn 2 presentaties om 14:00 &amp; om 15:30 dus let even op wanneer jouw danser danst! 
-Kaarten zijn nog te koop via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
 <p><img src="resources/image/algemeen/floor-of-fame-foto.jpg" alt="Floor of Fame Babs Balletschool"> 
 Met dank aan alle lieve dansers, fans en sponsor! </p>
