--- a/wie.html
+++ b/wie.html
@@ -54,7 +54,7 @@ Daphne is in 2018 afgestudeerd van de Bachelor opleiding Docent Dans ArtEZ Dansa
 </section><section><h1 id="sarah-gostelie">Sarah Gostelie</h1>
 <p><img src="resources/image/algemeen/Sarah%20Doker.jpeg" alt="Sarah">
 Sarah is in 2022 afgestudeerd aan de ARTEZ Bachelor Dansopleiding Docent Dans in Arnhem en heeft een enorme drive om haar leerlingen te laten dansen. Met oog voor detail en vrolijkheid staat zij voor de groepen. Sarah is naast docente; klassiek ballet, moderne dans en jazzballet ook gespecialiseerd in folklore/volksdans. Deze specialisatie geeft een verrassend tintje aan haar lessen. Dit seizoen gaat Sarah de woensdag kindergroepen op zich nemen maar ook bij projecten kun je haar voorbij zien komen. </p>
-</section><section></section>
+</section>
         </main>
         <footer>
             <nav>
