--- a/hoeveel.html
+++ b/hoeveel.html
@@ -40,7 +40,7 @@
 <tr><td>4 t/m 5 jaar:</td><td>€222,- per seizoen (45 min. 1 les per week)</td></tr>
 <tr><td>6 t/m 17 jaar:</td><td>€260,- per seizoen (60 min. 1 les per week)</td></tr>
 <tr><td>18 jaar en ouder:</td><td>€295,- per seizoen (60 min.1 les per week)</td></tr>
-<tr><td>extra Spitzen (15 min.):</td><td>€53,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>extra Spitzen (15 min.):</td><td>€55,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
